@@ -57,6 +57,9 @@ Displays a list to select files to restore.
 \fB\-u \-\-undo-last\fR
 Undo last safe removal.
 .TP
+\fB\-m \-\-most-recent-list\fR
+list most recently rmw'ed files
+.TP
 \fB\-v \-\-verbose\fR
 Print extra information on the output.
 .TP
