@@ -44,7 +44,6 @@ struct st_removed {
   st_removed *next_node;
 };
 
-
 /* function prototypes for main.c
  * These are only used in main.c but prototyping them here to enable
  * using rmw as a library (which is optional but just for people who
@@ -55,10 +54,6 @@ get_home_dir (const char *alternate_home_dir);
 
 const char *
 get_data_rmw_home_dir (void);
-
-const char*
-get_most_recent_list_filename (const char* data_dir);
-
 
 int
 remove_to_waste (
