@@ -62,6 +62,6 @@ int
 restore_select (st_waste *waste_head, st_time *st_time_var, const rmw_options * cli_user_options);
 
 void
-undo_last_rmw (st_waste *waste_head, st_time *st_time_var, const char *mrl_file, const rmw_options * cli_user_options);
+undo_last_rmw (st_waste *waste_head, st_time *st_time_var, const char *mrl_file, const rmw_options * cli_user_options, char *mrl_contents);
 #endif /* TEST_LIB */
 
